# TextGenerator

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO.md  TextGenerator  cmake_install.cmake  generated_text.txt  output.csv
.cmake/api/v1/reply/: cache-v2-dd80d87150da848fe8cb.json  cmakeFiles-v1-31f1f590d46cf1d13f03.json  codemodel-v2-7ec94a647cf6d6250607.json  index-2024-05-31T07-51-04-0733.json  target-TextGenerator-Debug-83b3f7dc96dceffa3ded.json
include/: frequency_table.h  multi_process.h  multi_process_frequency_table.h  shared.h  single_threaded.h  text_generator.h
src/: HomeWork1.c  frequency_table.c  main.c  multi_process.c  old main  single_threaded.c  text_generator.c
